--- a/profile-card-component/index.html
+++ b/profile-card-component/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@700&display=swap" rel="stylesheet">
-  <title>Frontend Mentor | Profile card component</title>
+  <title>Profile card </title>
 
   <style>
     .attribution { font-size: 11px; text-align: center; }
