--- a/profile-card-component/index.html
+++ b/profile-card-component/index.html
@@ -25,7 +25,7 @@
             <p class="info">Software Developer</p>
           </div>
         <hr/>
-          <div class="stats-wrapper">
+          <div class="build">
             <div>
               <ul>
                 <a href="https://www.linkedin.com/in/yagnik-patel/" target="_blank" class="profile">
