--- a/profile-card-component/index.html
+++ b/profile-card-component/index.html
@@ -29,7 +29,7 @@
             <div>
               <ul>
                 <a href="https://www.linkedin.com/in/yagnik-patel/" target="_blank" class="profile">
-                <li id="bottom-stat">Linkdien</li>
+                <li id="bottom-stat">LinkedIn</li>
                 </a>
               </ul>
             </div>
